--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mdi/js": "^7.4.47",
     "@mdi/react": "^1.6.1",
+    "@vercel/analytics": "^1.3.1",
     "next": "14.2.4",
     "nodemailer": "^6.9.14",
     "react": "^18",
