--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@mdi/js": "^7.4.47",
     "@mdi/react": "^1.6.1",
     "@vercel/analytics": "^1.3.1",
     "next": "14.2.4",
+    "next-sitemap": "^4.2.3",
     "nodemailer": "^6.9.14",
     "react": "^18",
     "react-dom": "^18"
